2008-08-18  Bart Veer  <bartv@ecoscentric.com>

	* host/Makefile.am: update host-side configury
	* host/Makefile.in, host/aclocal.m4, host/configure: regenerate

2007-12-14  Oyvind Harboe  <oyvind.harboe@zylin.com>
2007-12-21  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/profile.h: Declare profile_off.
	* src/profile.c: Added support for invoking profile_on() multiple
	times. It now stops profiling and sets up a fresh profiling range
	on every invocation using new profile_off() function.
	* doc/profile.sgml: Document it.
	
2005-05-13  Peter Korsgaard  <jacmet@sunsite.dk>

	* doc/profile.sgml: Fixed typo in HAL support section.

2005-02-18  Bart Veer  <bartv@ecoscentric.com>

	* doc/profile.sgml, misc/gprof.gdb, host/gprof.gdb,
	  host/acinclude.m4, host/aclocal.m4, host/configure,
	  host/configure.in, host/Makefile.am, host/Makefile.in:
	  Move gprof.gdb to the host subdirectory, and autoconfiscate it.

2003-09-29  Bart Veer  <bartv@ecoscentric.com>

	* src/profile.c (profile_tftp_read_next): fix off-by-one error
	which lost the first mcount record.

	* doc/profile.sgml: fix typo

	* cdl/profile_gprof.cdl: clarify description of the tftp port

2003-09-26  Bart Veer  <bartv@ecoscentric.com>

	* cdl/profile_gprof.cdl, include/gmon.out.h, include/profile.h,
 	src/profile.c, misc/gprof.gdb, doc/gprof.sgml
	Major update, including adding call graph support.

2003-04-27  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/profile.c (profile_on): Clear profile before use. Reported
	by Suzuki, Ryouzaburou.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/profile_gprof.cdl: Add doc link.

2002-11-15  Gary Thomas  <gthomas@ecoscentric.com>

	* include/gmon_out.h: Import non-GPL version from OpenBSD.

	* doc/profile.sgml: Improve description of host/client and
	target/server roles.

	* src/profile.c: 
	* cdl/profile_gprof.cdl: Allow TFTP port number to be configured.

	* src/profile.c: 
	* include/profile.h: Add proper C++ protections.  Change timer